--- a/src/pages/Work/OneTwo/OneTwo.module.css
+++ b/src/pages/Work/OneTwo/OneTwo.module.css
@@ -2,5 +2,6 @@
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
-	margin-top: 100px;
+	margin-top: 50px;
+	border-bottom: 1px solid var(--additional);
 }
