--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,11 @@ body {
 
 html {
    --mainFont: "Josefin Sans";
-/*   --secFont: "Sniglet";*/
+  --fszLogo: 28px;
+  --fsz100: 100px;
+  --fsz38: 38px;
+  --fsz24: 24px;
+  --fsz19: 19px;
 }
 
 
@@ -95,6 +99,13 @@ html {
   margin: 0 auto;
 }
 
+.loading {
+    width: 100vw;
+    height: 100vh;
+    color: var(--color);
+    background-color: var(--firstBg);
+}
+
 @media(max-width: 996px) {
   .mainBlock {
     width: 96%;
@@ -102,18 +113,18 @@ html {
 }
 
 ::-webkit-input-placeholder { /* Chrome */
-  color: var(--secBg);
+  color: var(--forText);
   opacity: 0.7;
 }
 :-ms-input-placeholder { /* IE 10+ */
-  color: var(--secBg);
+  color: var(--forText);
   opacity: 0.7;
 }
 ::-moz-placeholder { /* Firefox 19+ */
-  color: var(--secBg);
+  color: var(--forText);
   opacity: 0.7;
 }
 :-moz-placeholder { /* Firefox 4 - 18 */
-  color: var(--secBg);
+  color: var(--forText);
   opacity: 0.7;
 }
