fixed work bugs

--- a/src/components/Preloader/Preloader.module.css
+++ b/src/components/Preloader/Preloader.module.css
@@ -1,9 +1,10 @@
 .wrapper {
-
+	margin-top: 100px;
+	text-align: center;
 }
 
 .preloader {
-	position: absolute;
+	/*position: absolute;
 	top: 47%;
-	left: 47%;
+	left: 47%;*/
 }
