--- a/src/pages/Work/FirstSecondGroup/FirstGroupOnly/FirstGroupOnly.module.css
+++ b/src/pages/Work/FirstSecondGroup/FirstGroupOnly/FirstGroupOnly.module.css
@@ -1,4 +1,11 @@
 .wrapper {
 	text-align: center;
 	margin-top: 100px;
+	margin-bottom: 100px;
+}
+
+.button {
+	display: flex;
+	justify-content: center;
+	width: 100%;
 }
