--- a/src/pages/Work/ThirdGroup/GroupTemplate/GroupTemplate.module.css
+++ b/src/pages/Work/ThirdGroup/GroupTemplate/GroupTemplate.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-	margin-top: 30px;
+	margin-top: 40px;
 }
 
 .container {
@@ -9,6 +9,10 @@
 	justify-content: space-between;
 	border-bottom: 1px solid var(--additional);
 	cursor: pointer;
+}
+
+.container.disabled {
+	color: var(--forText);
 }
 
 .left {
