--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -9,6 +9,12 @@
 	position: relative;
 	justify-content: center;
 	align-items: center;
+	-webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none;
 }
 
 .loginButton:hover {
