--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -2,8 +2,9 @@
 	background-color: var(--secBg);
 	border-top: 1px solid var(--additional);
 	color: var(--forText);
-	height: 50px;
+	height: 40px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	font-size: var(--fsz15);
 }
