--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -1,7 +1,7 @@
 .modal {
 	height: 100vh;
 	width: 100%;
-	backdrop-filter: brightness(0.7) blur(2px);
+	backdrop-filter: brightness(0.7);
 	color: white;
 	position: fixed;
 	top: 0;
@@ -22,7 +22,7 @@
 }
 
 .modal__content {
-	padding: 20px;
+	padding: 40px 60px;
 	border-radius: 12px;
 	background-color: var(--secBg);
 	color: var(--color);
@@ -41,7 +41,7 @@
   position: absolute;
   right: 18px;
   top: 14px;
-  width: 32px;
+  width: 24px;
   height: 32px;
   opacity: 0.3;
   display: block;
@@ -54,7 +54,7 @@
   position: absolute;
   left: 15px;
   content: ' ';
-  height: 33px;
+  height: 22px;
   width: 2px;
   background-color: var(--color);
 }
