--- a/src/pages/Work/FirstSecondGroup/FirstSecondTemplate/FirstSecondTemplate.module.css
+++ b/src/pages/Work/FirstSecondGroup/FirstSecondTemplate/FirstSecondTemplate.module.css
@@ -9,10 +9,21 @@
 	margin-top: 50px;
 	margin-bottom: 20px;
 	display: inline-block;
+	position: relative;
 }
 
-.table.margin {
-	margin-top: 114px;
+.gostButton {
+	position: absolute;
+	top: -72px;
+	right: 0;
+	color: var(--forText);
+	padding: 2px 8px;
+	border-bottom: 1px solid var(--additional);
+	cursor: pointer;
+}
+
+.gostButton:hover {
+	color: var(--color);
 }
 
 .button {
@@ -31,6 +42,10 @@
 	color: var(--error);
 }
 
+.title.rejected {
+	color: var(--emission);
+}
+
 .name {
 	color: var(--forLinks);
 	cursor: pointer;
@@ -42,4 +57,23 @@
 
 .infoItem {
 	font-size: var(--fsz19);
+}
+
+.reason {
+	margin-top: 20px;
+	text-align: center;
+}
+
+.reasonTitle {
+	font-size: var(--fsz19);
+	border-bottom: 1px solid var(--additional);
+	display: inline-block;
+	width: 66%;
+	color: var(--error);
+}
+
+.reasonContent {
+	font-size: var(--fsz18);
+	max-width: 70%;
+	margin: 8px auto;
 }
