--- a/src/pages/Work/FirstSecondGroup/ObjCard/ObjCard.module.css
+++ b/src/pages/Work/FirstSecondGroup/ObjCard/ObjCard.module.css
@@ -1,7 +1,7 @@
 
 .item {
-	width: 320px;
-	height: 180px;
+	width: 290px;
+	height: 150px;
 	border-radius: 8px;
 	border: 1px solid var(--additional);
 	background-color: var(--secBg);
@@ -18,6 +18,11 @@
     position: relative;
 }
 
+.item.disabled {
+	pointer-events: none;
+	opacity: 0.5;
+}
+
 .imageBlock {
 	display: flex;
 	justify-content: center;
@@ -26,7 +31,7 @@
 }
 
 .image {
-	width: 100px;
+	width: 80px;
 
 	border-top-left-radius: 8px;
 	border-top-right-radius: 8px;
