--- a/src/pages/Work/ThirdGroup/GroupItem/GroupItem.module.css
+++ b/src/pages/Work/ThirdGroup/GroupItem/GroupItem.module.css
@@ -16,7 +16,6 @@
 
 .content {
 	margin: 40px 50px 0;
-	max-height: 400px;
 }
 
 .content.disabled {
@@ -27,9 +26,35 @@
 	font-size: var(--fsz19);
 }
 
+.info {
+	font-size: var(--fsz16);
+	display: inline-block;
+	margin-left: 8px;
+	color: var(--error);
+}
+
+.info.recieved {
+	color: var(--main);
+}
+
+.reject {
+	display: inline-block;
+	margin-right: 40px;
+}
+
+.reject.disabled {
+	opacity: 0.6;
+	pointer-events: none;
+}
+
 .title.disabled {
 	color: var(--forText);
 	opacity: 0.8;
+}
+
+.right {
+	display: flex;
+	align-items: center;
 }
 
 .icon {
@@ -54,5 +79,17 @@
 	padding: 4px 4px 1px;
 	border-color: var(--error);
 	color: var(--error);
-	transform: rotate(45deg);
 }
+
+.modalInfo {
+	font-size: var(--fsz24);
+	margin-bottom: 16px;
+	padding-bottom: 16px;
+	border-bottom: 1px solid var(--additional);
+	text-align: center;
+}
+
+.modalInput {
+	margin-top: 16px;
+}
+
