first part latestReport

--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,7 @@ html {
     --mainFont: "Josefin Sans";
     --fszLogo: 28px;
     --fsz64: 64px;
+    --fsz50: 50px;
     --fsz32: 32px;
     --fsz24: 24px;
     --fsz21: 21px;
