--- a/src/pages/Work/FourthGroup/LatestReport/LatestReport.module.css
+++ b/src/pages/Work/FourthGroup/LatestReport/LatestReport.module.css
@@ -97,6 +97,12 @@
 	text-decoration: underline;
 }
 
+.you {
+	color: var(--color);
+	margin-left: 6px;
+	color: var(--forText);
+}
+
 .excelButton {
 	margin-top: 80px;
 	display: flex;
