--- a/src/pages/Archive/MenuItem/MenuItem.module.css
+++ b/src/pages/Archive/MenuItem/MenuItem.module.css
@@ -22,6 +22,11 @@
 	opacity: 0.7;
 }
 
+.menuItem.loading {
+	pointer-events: none;
+	opacity: 0.7;
+}
+
 .disabledSign {
 	color: var(--error);
 	font-size: var(--fsz18);
