--- a/src/pages/Work/FourthGroup/LatestReport/ReportItem/ReportItem.module.css
+++ b/src/pages/Work/FourthGroup/LatestReport/ReportItem/ReportItem.module.css
@@ -123,3 +123,12 @@
 .info:after {
 	content: ")";
 }
+
+@media(max-height: 1430px) {
+	.content {
+		max-height: 350px;
+	}
+	.content.last {
+		max-height: 160px;
+	}
+}
