--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -1,5 +1,9 @@
+.inputBlock {
+	position: relative;
+}
+
 .input {
-	padding: 11px 14px;
+	padding: 11px 44px 11px 14px;
 	font-size: var(--fsz19);
 	border-radius: 4px;
 	background-color: var(--secBg);
@@ -12,4 +16,32 @@
 	-moz-box-shadow: 0 0 1px var(--color);
 	-webkit-box-shadow: 0 0 1px var(--color);
 	box-shadow: 0 0 1px var(--color);
+}
+
+.showPass {
+	font-size: 18px;
+	position: absolute;
+	top: 0;
+	right: 0;
+	height: 100%;
+	width: 34px;
+	cursor: pointer;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding-right: 6px;
+	color: var(--color);
+	opacity: 0.8;
+	user-select: none;
+}
+
+.showPassInner.crossedOut:before {
+	border-bottom: 1px solid var(--color);
+    position: absolute;
+    top: 2px;
+    left: -6px;
+    content: "";
+    width: 70%;
+    height: 50%;
+    transform: rotate(-45deg);
 }
