--- a/src/pages/Archive/ArchiveItem/ArchiveItem.module.css
+++ b/src/pages/Archive/ArchiveItem/ArchiveItem.module.css
@@ -103,12 +103,9 @@
 	width: 100%;
 	margin-top: 16px;
 	padding: 0px 20px 60px;
-	border-bottom: 2px solid var(--additional);
-	border-bottom-right-radius: 8px;
-	border-bottom-left-radius: 8px;
 	text-align: center;
 }
 
 .content.padding {
-	padding-top: 80px;
+	padding: 60px 20px 0px;
 }
